# agent-team-mail

./: .atm.toml  .env  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PUBLISHING.md  README.md  rust-toolchain.toml
crates/atm/: Cargo.toml
crates/atm-agent-mcp/: Cargo.toml
crates/atm-agent-mcp/src/: atm_tools.rs  audit.rs  cli.rs  context.rs  elicitation.rs  framing.rs  inject.rs  lib.rs  lifecycle.rs  lifecycle_emit.rs  lock.rs  mail_inject.rs  main.rs  proxy.rs  session.rs  stdin_queue.rs  stream_emit.rs  stream_norm.rs  summary.rs  tools.rs  transport.rs  turn_control.rs  watch_stream.rs
crates/atm-agent-mcp/src/commands/: attach.rs  config_cmd.rs  mod.rs  serve.rs  sessions.rs  summary.rs
crates/atm-agent-mcp/src/config/: mod.rs  resolve.rs  types.rs
crates/atm-agent-mcp/tests/: app_server_transport.rs  atm_tools_integration.rs  cli_json_streaming.rs  mcp_integration.rs  parity_contract.rs  proxy_integration.rs  serve_stdout_purity.rs  transport_reliability.rs
crates/atm-agent-mcp/tests/fixtures/: codex_cli_json_sample.jsonl  echo_mcp_server.rs
crates/atm-agent-mcp/tests/support/: env_guard.rs
crates/atm-ci-monitor/: Cargo.toml
crates/atm-ci-monitor/src/: consts.rs  gh_ledger.rs  github_provider.rs  lib.rs  mock_provider.rs  observability.rs  provider.rs  registry.rs  repo_state.rs  service.rs  types.rs
crates/atm-core/: Cargo.toml  build.rs
crates/atm-core/src/: consts.rs  control.rs  daemon_client.rs  daemon_stream.rs  event_log.rs  gh_command.rs  gh_monitor_observability.rs  home.rs  install.rs  lib.rs  log_reader.rs  logging.rs  logging_event.rs  model_registry.rs  observability.rs  pid.rs  retention.rs  spawn.rs  team_config_store.rs  text.rs
crates/atm-core/src/config/: aliases.rs  bridge.rs  discovery.rs  mod.rs  types.rs
crates/atm-core/src/context/: mod.rs  platform.rs  repo.rs  system.rs
crates/atm-core/src/io/: atomic.rs  error.rs  hash.rs  inbox.rs  lock.rs  mod.rs  spool.rs
crates/atm-core/src/schema/: agent_member.rs  inbox_message.rs  mod.rs  permissions.rs  settings.rs  task.rs  team_config.rs  version.rs
crates/atm-core/src/util/: state.rs
crates/atm-core/tests/: daemon_autostart_observability.rs  daemon_writer_fan_in.rs  home_dir_audit.rs  logging_identity_contract.rs  retention_tests.rs  test_unified_logging.rs
crates/atm-daemon/: Cargo.toml
crates/atm-daemon-launch/: Cargo.toml
crates/atm-daemon-launch/src/: lib.rs
crates/atm-daemon/src/: lib.rs  main.rs
crates/atm-daemon/src/daemon/: consts.rs  dedup.rs  event_loop.rs  gh_monitor_router.rs  gh_monitor_router_tests.rs  log_writer.rs  mod.rs  observability.rs  pid_backend_validation.rs  session_registry.rs  shutdown.rs  socket.rs  socket_gh_monitor_tests.rs  spool_merge.rs  spool_task.rs  startup_auth.rs  status.rs  watcher.rs
crates/atm-daemon/src/plugin/: context.rs  mail_service.rs  mod.rs  registry.rs  traits.rs  types.rs
crates/atm-daemon/src/plugins/: consts.rs  mod.rs
crates/atm-daemon/src/roster/: mod.rs  service.rs  tracking.rs
crates/atm-daemon/tests/: agent_state_integration.rs  bridge_e2e.rs  bridge_sync_tests.rs  ci_monitor_error_tests.rs  ci_monitor_integration.rs  ci_provider_loader_test.rs  daemon_tests.rs  gemini_teardown_integration.rs  integration_orchestration.rs  issues_error_tests.rs  issues_integration.rs  otel_smoke_integration.rs  plugin_tests.rs  provider_loader_integration.rs  roster_tests.rs  test_log_fan_in.rs  test_spool_merge.rs  tmux_integration.rs  tui_reliability_tests.rs  worker_adapter_tests.rs
crates/atm-tui/: Cargo.toml
crates/atm-tui/src/: agent_terminal.rs  app.rs  codex_adapter.rs  codex_watch.rs  config.rs  daemon_launch.rs  dashboard.rs  events.rs  lib.rs  main.rs  ui.rs
crates/atm-tui/src/codex_vendor/: mod.rs  text_formatting.rs
crates/atm-tui/tests/: ui_render_output.rs
crates/atm/scripts/: atm-hook-relay.py  atm-identity-write.py  atm_hook_lib.py  gate-agent-spawns.py  notification-idle-relay.py  permission-request-relay.py  session-end.py  session-start.py  teammate-idle-relay.py
crates/atm/src/: consts.rs  main.rs
crates/atm/src/commands/: ack.rs  bridge.rs  broadcast.rs  cleanup.rs  config_cmd.rs  daemon.rs  doctor.rs  error.rs  gh.rs  inbox.rs  init.rs  launch.rs  logging_health.rs  logs.rs  mcp.rs  members.rs  mod.rs  (+12 more)
crates/atm/tests/: integration_auto_identity.rs  integration_backup_restore.rs  integration_broadcast.rs  integration_conflict_tests.rs  integration_daemon_autostart.rs  integration_daemon_autostart_observability.rs  integration_daemon_autostart_windows.rs  integration_discovery.rs  integration_e2e_workflows.rs  integration_external_member.rs  integration_gh.rs  integration_inbox.rs  integration_init_onboarding.rs  integration_logging_health_schema.rs  integration_mcp.rs  integration_monitor.rs  integration_multiteam_isolation.rs  integration_otel_traces.rs  integration_read.rs  integration_read_timeout.rs  integration_register.rs  integration_send.rs  integration_spawn_folder.rs  integration_team_join.rs  integration_teams_cleanup_dry_run.rs  integration_transient_registration.rs
crates/sc-compose/: Cargo.toml
crates/sc-compose/src/: main.rs  observability.rs
crates/sc-compose/tests/: cli_smoke.rs
crates/sc-composer/: Cargo.toml
crates/sc-composer/src/: context.rs  diagnostics.rs  frontmatter.rs  include.rs  lib.rs  pipeline.rs  render.rs  resolver.rs  validate.rs
crates/sc-composer/tests/: integration.rs
crates/sc-observability/: Cargo.toml
crates/sc-observability-otlp/: Cargo.toml
crates/sc-observability-otlp/src/: lib.rs
crates/sc-observability-otlp/tests/: timestamp_export_integration.rs
crates/sc-observability-types/: Cargo.toml
crates/sc-observability-types/src/: lib.rs
crates/sc-observability/src/: health.rs  lib.rs  metrics.rs  otlp_adapter.rs  trace.rs
crates/sc-observability/tests/: log_export_integration.rs  metric_export_integration.rs  trace_export_integration.rs
examples/ci-provider-azdo/: Cargo.toml  README.md
examples/ci-provider-azdo/src/: lib.rs
examples/provider-stub/: Cargo.toml  README.md
examples/provider-stub/src/: lib.rs
(+428 files in other folders)
