[workspace]
resolver = "2"
members = [
    "crates/atm-core",
    "crates/atm",
    "crates/atm-daemon",
    "crates/atm-agent-mcp",
    "crates/atm-tui",
]
exclude = [
    "examples/provider-stub",
]

[workspace.package]
version = "0.14.0"
edition = "2024"
authors = ["agent-team-mail contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/randlee/agent-team-mail"
homepage = "https://github.com/randlee/agent-team-mail"
rust-version = "1.85"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = { version = "0.8", features = ["parse"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Internal dependencies
agent-team-mail-core = { path = "crates/atm-core", version = "=0.14.0" }
