[workspace]
resolver = "2"
members = [
    "crates/atm-ci-monitor",
    "crates/atm-core",
    "crates/atm-daemon-launch",
    "crates/atm",
    "crates/atm-daemon",
    "crates/atm-agent-mcp",
    "crates/atm-tui",
    "crates/sc-observability",
    "crates/sc-observability-otlp",
    "crates/sc-composer",
    "crates/sc-compose",
]
exclude = [
    "examples/provider-stub",
]

[workspace.package]
version = "0.46.0"
edition = "2024"
authors = ["agent-team-mail contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/randlee/agent-team-mail"
homepage = "https://github.com/randlee/agent-team-mail"
rust-version = "1.85"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = { version = "0.8", features = ["parse"] }
minijinja = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Internal dependencies
agent-team-mail-ci-monitor = { path = "crates/atm-ci-monitor", version = "=0.46.0" }
agent-team-mail-core = { path = "crates/atm-core", version = "=0.46.0" }
agent-team-mail-daemon-launch = { path = "crates/atm-daemon-launch", version = "=0.46.0" }
agent-team-mail-daemon = { path = "crates/atm-daemon", version = "=0.46.0" }
sc-composer = { path = "crates/sc-composer", version = "=0.46.0" }
sc-observability = { path = "crates/sc-observability", version = "=0.46.0" }
sc-observability-otlp = { path = "crates/sc-observability-otlp", version = "=0.46.0" }
