[package]
name = "atm-agent-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP proxy for managing Codex agent sessions with ATM team integration"

[[bin]]
name = "atm-agent-mcp"
path = "src/main.rs"

[dependencies]
agent-team-mail-core.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml.workspace = true
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
