[package]
name = "agent-team-mail-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Core library for agent-team-mail: file-based messaging for AI agent teams"
keywords = ["ai-agents", "messaging", "team-communication", "claude", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
blake3 = "1.5"
chrono = "0.4"
dirs = "5.0"
fs2 = "0.4"
tracing = "0.1"

# For config parsing
toml = { version = "0.8", features = ["parse"] }

# For hostname detection
hostname = "0.4"

# For URL parsing (git remote URL parsing)
url = "2.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.13"
serial_test = "3.0"
