[package]
name = "agent-team-mail-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Plugin daemon for agent-team-mail: GitHub issues, CI monitoring, cross-computer bridge"
keywords = ["ai-agents", "messaging", "daemon", "plugins", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "atm-daemon"
path = "src/main.rs"

[[test]]
name = "ci_monitor_error_tests"
path = "tests/ci_monitor_error_tests.rs"
required-features = ["test-support"]

[[test]]
name = "ci_monitor_integration"
path = "tests/ci_monitor_integration.rs"
required-features = ["test-support"]

[dependencies]
agent-team-mail-ci-monitor.workspace = true
agent-team-mail-core.workspace = true
agent-team-mail-daemon-launch.workspace = true
sc-observability.workspace = true
sc-observability-otlp.workspace = true
sc-observability-types.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing.workspace = true
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
notify = "7"
dirs = "5"
hostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
libloading = "0.8"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
globset = "0.4"
sha2 = "0.10"
sysinfo = { version = "0.31", default-features = false, features = ["system"] }
# SSH/SFTP support (optional, behind feature flag)
ssh2 = { version = "0.9", optional = true }

# Unix process monitoring (kill -0 for PID existence checks)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
ssh = ["ssh2"]
ssh-tests = ["ssh"]
test-support = []

[dev-dependencies]
agent-team-mail-ci-monitor = { workspace = true, features = ["test-support"] }
tempfile = "3.13"
tokio = { version = "1", features = ["full", "test-util"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
serial_test = "3"
futures-util = "0.3"
tracing-test = "0.2"
