[package]
name = "atm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "atm"
path = "src/main.rs"

[dependencies]
atm-core.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "3"
