[package]
name = "agent-team-mail"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "CLI for agent-team-mail: send, read, and manage messages for AI agent teams"
keywords = ["ai-agents", "messaging", "team-communication", "claude", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "atm"
path = "src/main.rs"

[dependencies]
agent-team-mail-core.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"
thiserror = "2"
notify = "7"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "3"
