[package]
name = "agent-team-mail"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "CLI for agent-team-mail: send, read, and manage messages for AI agent teams"
keywords = ["ai-agents", "messaging", "team-communication", "claude", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**", "scripts/**", "README.md", "LICENSE", "Cargo.toml"]

[[bin]]
name = "atm"
path = "src/main.rs"

[dependencies]
agent-team-mail-core.workspace = true
sc-composer.workspace = true
sc-observability.workspace = true
sc-observability-otlp.workspace = true
sc-observability-types.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json.workspace = true
minijinja.workspace = true
toml = "0.8"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"
thiserror = "2"
notify = "7"
tracing.workspace = true
regex = "1"
sysinfo = { version = "0.31", default-features = false, features = ["system"] }
crossterm = "0.28"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
sysinfo = { version = "0.31", default-features = false, features = ["system"] }

[dev-dependencies]
# BA.3-FIX-R2 ruling: daemon-launch stays test-only here because src/ no longer
# consumes it directly. BA.4 can revisit whether the CLI ever needs a
# non-dev launcher dependency again.
agent-team-mail-daemon-launch.workspace = true
assert_cmd = "2"
predicates = "3"
serial_test = "3"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
