[package]
name = "sc-compose"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "CLI for composing AI prompts with sc-composer"

[dependencies]
anyhow.workspace = true
sc-composer = { path = "../sc-composer", version = "=0.42.0" }
sc-observability.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
