[package]
name = "sc-composer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Prompt/template composition engine for AI agent pipelines"

[dependencies]
thiserror.workspace = true
minijinja.workspace = true
serde.workspace = true
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
