[package]
name = "atm-ci-provider-azdo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

# Exclude this example from the parent workspace
[workspace]

[dependencies]
# Use path dependencies to the atm-daemon and atm-core
atm-daemon = { path = "../../crates/atm-daemon" }
atm-core = { path = "../../crates/atm-core" }
