[package]
name = "atm-provider-stub"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use path dependencies to the atm-daemon and atm-core
agent-team-mail-daemon = { path = "../../crates/atm-daemon" }
agent-team-mail-core = { path = "../../crates/atm-core" }
